--- a/sassy folder/main.scss
+++ b/sassy folder/main.scss
@@ -1,9 +1,6 @@
-@import '_contact';
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    word-break: break-word;
     padding: 0;
     max-width: 100%;
     overflow-x: hidden;
@@ -18,11 +15,27 @@ body {
         display: flex;
         justify-content: space-around;
         background-color: #fff;
+        height: 30px;
         *{
             flex: 1;
             text-align: center;
             padding: 5px;
-            background-color: red;
+        }
+        #logo{
+            display: flex;
+            align-items: center;
+            word-break: normal;
+            img{
+                object-fit: contain;
+                height: 100%;
+                width: auto;
+                transform: scale(1.8);
+            }
+        }
+        @media (max-width: 570px) {
+            #logo {
+                display: none; /* Hides the logo on screens 570px wide or smaller */
+            }
         }
     }
 }
